--- a/src/test/resources/config.properties
+++ b/src/test/resources/config.properties
@@ -1,4 +1,4 @@
-appiumServer=http://localhost:4723/wd/hub
+appiumServer=http://localhost:4723
 platformName=Android
 deviceName=emulator-5554
 appPackage=com.wdiodemoapp
